# comp-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  problem_spec.json  pyproject.toml
comp_agent/: cli.py  config.py  llm.py
comp_agent/controller/: __init__.py  budget.py  loop.py  policy.py
comp_agent/executor/: __init__.py  ensemble.py  implement.py  runner.py  snapshot.py  validate.py
comp_agent/models/: __init__.py  hypothesis.py  result.py  spec.py
comp_agent/parser/: __init__.py  parse.py
comp_agent/parser/extractors/: custom.py  hackathon.py  kaggle.py  puzzle.py
comp_agent/strategist/: __init__.py  _context.py  baseline.py  classify.py  critique.py  hypothesize.py  prioritize.py
comp_agent/strategist/playbooks/: combinatorial.md  cv.md  math_puzzle.md  nlp.md  systems.md  tabular_ml.md
comp_agent/tracker/: __init__.py  compare.py  db.py  log.py
docs/plans/: 2026-03-24-001-feat-competition-agent-full-implementation-plan.md
tests/: test_cli.py  test_controller.py  test_ensemble.py  test_executor.py  test_models.py  test_parser.py  test_strategist.py  test_tracker.py
