[project]
name = "comp-agent"
version = "0.1.0"
description = "CLI agent framework for winning competitions through iterative score optimization"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "anthropic>=0.50",
]

[project.scripts]
compete = "comp_agent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
